# foodconnection-recorder

./: .gitignore  CHANGELOG.md  Makefile  README.md.backup  migration_add_screenshot_path.sql  setup.sh  start.sh
.serena/cache/python/: document_symbols.pkl  raw_document_symbols.pkl
backend/: .env.example  food_connection.db.backup  pyproject.toml  requirements.txt  run.py  test_connection.py
backend/app/: config.py  database.py  main.py  models.py  schema.py
backend/app/services/: csv_exporter.py  errors.py  job_runner.py  pubsub.py  recorder.py  replicator_runner.py  scraper.py
backend/app/services/replicator/: __init__.py  base_image_generator.py  claude_generator.py  claude_image_generator.py  design_extractor.py  gemini_image_generator.py  image_comparator.py  image_generator.py  multi_section_generator.py  site_scraper.py  verifier.py
backend/app/utils/: filename.py
docs/: implementation_plan_image_based_generation_v2.md  implementation_plan_image_based_generation_v2_revised.md
docs/plan/: site-replicator-plan.md
frontend/: IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ErrorLog.tsx  JobForm.tsx  ProgressBar.tsx  RecordTable.tsx  ReplicationForm.tsx  ReplicationProgress.tsx
frontend/lib/: apollo.ts
frontend/lib/graphql/: mutations.ts  queries.ts  subscriptions.ts
frontend/types/: index.ts
