[tool.poetry]
name = "food-connection-recorder-backend"
version = "1.0.0"
description = "Web scraping and recording backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.216.0"}
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
playwright = "^1.40.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
